# PhotoshopAPI

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  CMakePresets.json  LICENSE.txt  MANIFEST.in  PhotoshopAPI.sln  README.md  TODO.md  generate_release.py  pyproject.toml  setup.py  tmp.py  vcpkg.json
PhotoshopAPI/: CMakeLists.txt  Macros.h  PhotoshopAPI.vcxproj  PhotoshopAPI.vcxproj.filters
PhotoshopAPI/PhotoshopFile/: PhotoshopFile.h
PhotoshopAPI/include/: PhotoshopAPI.h
PhotoshopAPI/src/: Macros.h
PhotoshopAPI/src/Compute/: ComputeAPI.h
PhotoshopAPI/src/LayeredFile/: GroupLayer.cpp  GroupLayer.h  ImageLayer.cpp  ImageLayer.h  Layer.h  LayeredFile.cpp  LayeredFile.h  concepts.h  fwd.h
PhotoshopAPI/src/PhotoshopFile/: AdditionalLayerInfo.cpp  AdditionalLayerInfo.h  ColorModeData.cpp  ColorModeData.h  FileHeader.cpp  FileHeader.h  ImageData.h  ImageResources.cpp  ImageResources.h  LayerAndMaskInformation.cpp  LayerAndMaskInformation.h  PhotoshopFile.cpp  PhotoshopFile.h
PhotoshopAPI/src/Renderer/: Renderer.cpp  Renderer.h
PhotoshopAPI/src/Util/: CoordinateUtil.h  DescriptorUtil.h  EndianByteSwap.h  Enum.h  FileUtil.h  Logger.h  ProgressCallback.h  Read.h  StringUtil.h
PhotoshopExamples/CreateGroups/: CMakeLists.txt  create_groups.py  main.cpp
PhotoshopExamples/ExtendedSignature/: CMakeLists.txt  main.cpp
PhotoshopExamples/ExtractImageData/: CMakeLists.txt  ImageData.psb  extract_image_data.py  main.cpp
PhotoshopExamples/ModifyLayerStructure/: CMakeLists.txt  LayeredFile.psd  main.cpp  modify_layer_structure.py
PhotoshopExamples/ReplaceImageData/: CMakeLists.txt  ImageData.psb  main.cpp  replace_image_data.py
PhotoshopExamples/SmartObjects/: CMakeLists.txt  main.cpp  smart_objects.py
PhotoshopTest/: CMakeLists.txt  PhotoshopTest.vcxproj
PhotoshopTest/documents/: CMYK_16bit.psb  CMYK_8bit.psb  Grayscale_16bit.psd  Grayscale_32bit.psb  Grayscale_8bit.psd  Groups_16bit.psb  Groups_16bit.psd  Groups_32bit.psb  Groups_8bit.psb  Groups_8bit.psd  Indexed_8bit.psb  Indexed_8bit.psd  Masks_8bit.psb  Masks_8bit.psd  README.md  SingleLayer_16bit.psb  SingleLayer_16bit.psd  SingleLayer_32bit.psd  SingleLayer_32bit_MaximizeCompatibilityOff.psb  SingleLayer_32bit_MaximizeCompatibilityOff.psd  SingleLayer_8bit.psb  SingleLayer_8bit_MaximizeCompatibilityOff.psb
PhotoshopTest/documents/BlendFill/: blend_fill.psd
PhotoshopTest/documents/CMYK/: CMYK_16.psb  CMYK_16.psd  CMYK_16bit.psd  CMYK_8.psb  CMYK_8.psd  CMYK_8bit.psd
PhotoshopTest/documents/ClippingMasks/: clipping_masks.psd
PhotoshopTest/documents/ColorManagement/: color_checker_icc_adobe_rgb_16.psd  color_checker_icc_srgb_16.psd  color_checker_ocio_acescg_16.psd
PhotoshopTest/documents/Compression/: Compression_Mixed_8bit.psb  Compression_Mixed_8bit.psd  Compression_RAW_8bit.psb  Compression_RAW_8bit.psd  Compression_RLE_8bit.psb  Compression_RLE_8bit.psd  Compression_ZipPrediction_16bit.psb  Compression_ZipPrediction_16bit.psd  Compression_ZipPrediction_32bit.psb  Compression_ZipPrediction_32bit.psd  Compression_ZipPrediction_MaximizeCompatibilityOff_16bit.psb  Compression_ZipPrediction_MaximizeCompatibilityOff_16bit.psd  Compression_ZipPrediction_MaximizeCompatibilityOff_32bit.psb  Compression_ZipPrediction_MaximizeCompatibilityOff_32bit.psd  README.md
PhotoshopTest/documents/DPI/: 300_point_5_dpi.psd  300dpi.psd  700dpi.psd
PhotoshopTest/documents/Grayscale/: Grayscale_16.psb  Grayscale_16.psd  Grayscale_16bit.psb  Grayscale_32.psb  Grayscale_32.psd  Grayscale_32bit.psd  Grayscale_8.psb  Grayscale_8.psd  Grayscale_8bit.psb
PhotoshopTest/documents/Groups/: Groups_32bit.psd
PhotoshopTest/documents/ICCProfiles/: AdobeRGB1998.psb  AppleRGB.icc  AppleRGB.psb  CIERGB.icc  CIERGB.psb
PhotoshopTest/documents/LayerColor/: layers_with_display_color.psb  layers_with_display_color.psd
PhotoshopTest/documents/Masks/: SingleMask_White.psb
PhotoshopTest/documents/SingleLayer/: SingleLayer_16bit_MaximizeCompatibilityOff.psb  SingleLayer_16bit_MaximizeCompatibilityOff.psd  SingleLayer_32bit.psb  SingleLayer_8bit.psd  SingleLayer_8bit_MaximizeCompatibilityOff.psd
PhotoshopTest/documents/SmartObjects/: README.md  smart_objects_transformed.psd
PhotoshopTest/documents/TextLayers/: README.md  TextLayers_Basic.psd  TextLayers_CharacterStyles.psd  TextLayers_FontFallback.psd  TextLayers_Paragraph.psd  TextLayers_StyleRuns.psd  TextLayers_TextOnPath.psd  TextLayers_Transform.psd  TextLayers_Vertical.psd  TextLayers_VerticalBox.psd  TextLayers_Warp.psd
PhotoshopTest/documents/UnicodeNames/: UnicodeLayerNames.psb  UnicodeLayerNames.psd
PhotoshopTest/src/: DetectArmMac.h  TestMacros.h  main.cpp
PhotoshopTest/src/TestBlendFill/: TestBlendFill.cpp
PhotoshopTest/src/TestCMYK/: TestCMYK.cpp
PhotoshopTest/src/TestCompression/: TestRLE.cpp  TestRLECompression.cpp  TestZIPPrediction.cpp  TestZipCompression.cpp  TestZipPredictionCompression.cpp  Utility.cpp  Utility.h
PhotoshopTest/src/TestDecompression/: TestRLEDecompression.cpp  TestZIPPredictionDecompression.cpp  Utility.cpp  Utility.h
docs/doxygen/: CMakeLists.txt  Doxyfile.in  benchmarks.rst  building.rst  conf.py  index.rst  requirements.txt
docs/doxygen/source/: conf.py  (+1 more)
python/: CMakeLists.txt  _tmp.py
python/psapi/: __init__.py  __init__.pyi  _image_layer.pyi  _layered_file.pyi  layer_util.py  types.py
python/psapi-stubs/: __init__.pyi  _group_layer.pyi  _image_layer.pyi  _imagedata_layertype.pyi  _layer.pyi  _layered_file.pyi  _photoshop_file.pyi  _smart_object_layer.pyi  _smart_object_warp.pyi  _types.pyi
python/psapi-test/: requirements.txt  test_grouplayer.py  test_iccprofile.py  test_imagelayer.py  test_layered_file.py  test_mask_mixin.py  test_mesh_operations.py  test_point2d.py  test_proxy_smoke.py  test_smartobjectlayer.py
python/src/: DeclareEnums.h  DeclareGeometry.h  DeclareGroupLayer.h  DeclareImageLayer.h  DeclareLayer.h  DeclareLayeredFile.h  DeclareOcioProfile.h  DeclarePhotoshopFile.h  DeclareSmartObjectLayer.h  DeclareSmartObjectWarp.h  DeclareUtil.h  Declare_ImageDataLayerType.h  LayeredFile.cpp  main.cpp
(+423 files in other folders)
